generated-out/vanilla/dear-imgui-raw-vanilla/cbits/dcimgui_nodefaultargfunctions.h


typedef struct ImVec2_t ImVec2;
typedef unsigned int ImGuiID;      
typedef struct ImGuiInputTextCallbackData_t ImGuiInputTextCallbackData;        
typedef int ImGuiKey;             
typedef int ImGuiMouseButton;     
typedef int ImGuiButtonFlags;       
typedef int ImGuiFocusedFlags;      
typedef int ImGuiHoveredFlags;      
typedef int ImGuiInputTextFlags;    
typedef int ImGuiKeyChord;          
typedef int ImGuiPopupFlags;        
typedef int (*ImGuiInputTextCallback)(ImGuiInputTextCallbackData* data);  
CIMGUI_API void             ImGui_NewFrame(void);       
CIMGUI_API bool        ImGui_IsWindowAppearing(void);
CIMGUI_API bool        ImGui_IsWindowCollapsed(void);
CIMGUI_API bool        ImGui_IsWindowFocused(ImGuiFocusedFlags flags );  
CIMGUI_API bool        ImGui_IsWindowHovered(ImGuiHoveredFlags flags );  
CIMGUI_API void  ImGui_NewLine(void);                          
CIMGUI_API bool ImGui_ComboCallback(const char* label, int* current_item, const char* (*getter)(void* user_data, int idx), void* user_data, int items_count, int popup_max_height_in_items );
CIMGUI_API bool ImGui_InputTextWithHint(const char* label, const char* hint, char* buf, size_t buf_size, ImGuiInputTextFlags flags , ImGuiInputTextCallback callback , void* user_data );
CIMGUI_API bool                ImGui_IsItemToggledSelection(void);  
CIMGUI_API bool ImGui_ListBox(const char* label, int* current_item, const char*const items[], int items_count, int height_in_items );
CIMGUI_API bool ImGui_ListBoxCallback(const char* label, int* current_item, const char* (*getter)(void* user_data, int idx), void* user_data, int items_count, int height_in_items );
CIMGUI_API void ImGui_PlotLinesCallback(const char* label, float (*values_getter)(void* data, int idx), void* data, int values_count, int values_offset , const char* overlay_text , float scale_min , float scale_max , ImVec2 graph_size );
CIMGUI_API void ImGui_PlotHistogramCallback(const char* label, float (*values_getter)(void* data, int idx), void* data, int values_count, int values_offset , const char* overlay_text , float scale_min , float scale_max , ImVec2 graph_size );
CIMGUI_API bool ImGui_MenuItem(const char* label, const char* shortcut , bool selected , bool enabled ); 
CIMGUI_API bool ImGui_MenuItemBoolPtr(const char* label, const char* shortcut, bool* p_selected, bool enabled ); 
CIMGUI_API void ImGui_OpenPopup(const char* str_id, ImGuiPopupFlags popup_flags );                          
CIMGUI_API void ImGui_OpenPopupID(ImGuiID id, ImGuiPopupFlags popup_flags );                                
CIMGUI_API void ImGui_OpenPopupOnItemClick(const char* str_id , ImGuiPopupFlags popup_flags );  
CIMGUI_API bool ImGui_IsPopupOpen(const char* str_id, ImGuiPopupFlags flags );  
CIMGUI_API void  ImGui_NextColumn(void);                                   
CIMGUI_API void ImGui_LogToTTY(int auto_open_depth );                                      
CIMGUI_API void ImGui_LogToFile(int auto_open_depth , const char* filename );  
CIMGUI_API void ImGui_LogToClipboard(int auto_open_depth );                                
CIMGUI_API void ImGui_LogFinish(void);                                                               
CIMGUI_API void ImGui_LogButtons(void);                                                              
CIMGUI_API bool           ImGui_IsItemHovered(ImGuiHoveredFlags flags );        
CIMGUI_API bool           ImGui_IsItemActive(void);                                      
CIMGUI_API bool           ImGui_IsItemFocused(void);                                     
CIMGUI_API bool           ImGui_IsItemClicked(ImGuiMouseButton mouse_button );  
CIMGUI_API bool           ImGui_IsItemVisible(void);                                     
CIMGUI_API bool           ImGui_IsItemEdited(void);                                      
CIMGUI_API bool           ImGui_IsItemActivated(void);                                   
CIMGUI_API bool           ImGui_IsItemDeactivated(void);                                 
CIMGUI_API bool           ImGui_IsItemDeactivatedAfterEdit(void);                        
CIMGUI_API bool           ImGui_IsItemToggledOpen(void);                                 
CIMGUI_API bool           ImGui_IsAnyItemHovered(void);                                  
CIMGUI_API bool           ImGui_IsAnyItemActive(void);                                   
CIMGUI_API bool           ImGui_IsAnyItemFocused(void);                                  
CIMGUI_API bool        ImGui_IsKeyDown(ImGuiKey key);                                            
CIMGUI_API bool        ImGui_IsKeyPressed(ImGuiKey key, bool repeat );               
CIMGUI_API bool        ImGui_IsKeyReleased(ImGuiKey key);                                        
CIMGUI_API bool        ImGui_IsKeyChordPressed(ImGuiKeyChord key_chord);                         
CIMGUI_API bool             ImGui_IsMouseDown(ImGuiMouseButton button);                                                      
CIMGUI_API bool             ImGui_IsMouseClicked(ImGuiMouseButton button, bool repeat );                        
CIMGUI_API bool             ImGui_IsMouseReleased(ImGuiMouseButton button);                                                  
CIMGUI_API bool             ImGui_IsMouseDoubleClicked(ImGuiMouseButton button);                                             
CIMGUI_API bool             ImGui_IsMouseReleasedWithDelay(ImGuiMouseButton button, float delay);                            
CIMGUI_API bool             ImGui_IsMousePosValid(const ImVec2* mouse_pos );                                     
CIMGUI_API bool             ImGui_IsAnyMouseDown(void);                                                                      
CIMGUI_API bool             ImGui_IsMouseDragging(ImGuiMouseButton button, float lock_threshold );              
CIMGUI_API void        ImGui_LoadIniSettingsFromDisk(const char* ini_filename);                           
CIMGUI_API void        ImGui_LoadIniSettingsFromMemory(const char* ini_data, size_t ini_size );  
CIMGUI_API void* ImGui_MemAlloc(size_t size);
CIMGUI_API void  ImGui_MemFree(void* ptr);