generated-out/docking/dear-imgui-raw-docking/cbits/DearImGuiWrappers.h

bool ImGui_InvisibleButton_wrap(const char* str_id, ImVec2 const* size, ImGuiButtonFlags flags);
bool ImGui_IsMouseHoveringRect_wrap(ImVec2 const* r_min, ImVec2 const* r_max, bool clip);
bool ImGui_IsRectVisible_wrap(ImVec2 const* rect_min, ImVec2 const* rect_max);
bool ImGui_IsRectVisibleBySize_wrap(ImVec2 const* size);
void ImGui_PlotHistogram_wrap(const char* label, const float* values, int values_count, int values_offset, const char* overlay_text, float scale_min, float scale_max, ImVec2 const* graph_size, int stride);
void ImGui_PlotHistogramCallback_wrap(const char* label, float (*values_getter)(void* data, int idx), void* data, int values_count, int values_offset, const char* overlay_text, float scale_min, float scale_max, ImVec2 const* graph_size);
void ImGui_PlotLinesCallback_wrap(const char* label, float (*values_getter)(void* data, int idx), void* data, int values_count, int values_offset, const char* overlay_text, float scale_min, float scale_max, ImVec2 const* graph_size);