generated-out/docking/dear-imgui-raw-docking/src/DearImGui/Raw/ImGui.hsc


-- C: bool ImGui::InputTextWithHint(const char* label, const char* hint, char* buf, size_t buf_size, ImGuiInputTextFlags flags, ImGuiInputTextCallback callback, void* user_data)
foreign import capi unsafe "dcimgui_nodefaultargfunctions.h ImGui_InputTextWithHint"
  imGui_InputTextWithHint :: CString -> CString -> (Ptr CChar) -> CSize -> ImGuiInputTextFlags -> ImGuiInputTextCallback -> (Ptr ()) -> IO CBool
foreign import capi unsafe "DearImGuiWrappers.h ImGui_InvisibleButton_wrap"
  c_imGui_InvisibleButton :: CString -> (Ptr ImVec2) -> ImGuiButtonFlags -> IO CBool

imGui_InvisibleButton :: CString -> ImVec2 -> ImGuiButtonFlags -> IO CBool
imGui_InvisibleButton str_id size flags =
  with size $ \_p1 -> c_imGui_InvisibleButton str_id _p1 flags

-- C: bool ImGui::IsAnyItemActive()
foreign import capi unsafe "dcimgui_nodefaultargfunctions.h ImGui_IsAnyItemActive"
  imGui_IsAnyItemActive :: IO CBool
-- C: bool ImGui::IsAnyItemFocused()
foreign import capi unsafe "dcimgui_nodefaultargfunctions.h ImGui_IsAnyItemFocused"
  imGui_IsAnyItemFocused :: IO CBool
-- C: bool ImGui::IsAnyItemHovered()
foreign import capi unsafe "dcimgui_nodefaultargfunctions.h ImGui_IsAnyItemHovered"
  imGui_IsAnyItemHovered :: IO CBool
-- C: bool ImGui::IsAnyMouseDown()
foreign import capi unsafe "dcimgui_nodefaultargfunctions.h ImGui_IsAnyMouseDown"
  imGui_IsAnyMouseDown :: IO CBool
-- C: bool ImGui::IsItemActivated()
foreign import capi unsafe "dcimgui_nodefaultargfunctions.h ImGui_IsItemActivated"
  imGui_IsItemActivated :: IO CBool
-- C: bool ImGui::IsItemActive()
foreign import capi unsafe "dcimgui_nodefaultargfunctions.h ImGui_IsItemActive"
  imGui_IsItemActive :: IO CBool
-- C: bool ImGui::IsItemClicked(ImGuiMouseButton mouse_button)
foreign import capi unsafe "dcimgui_nodefaultargfunctions.h ImGui_IsItemClicked"
  imGui_IsItemClicked :: ImGuiMouseButton -> IO CBool
-- C: bool ImGui::IsItemDeactivated()
foreign import capi unsafe "dcimgui_nodefaultargfunctions.h ImGui_IsItemDeactivated"
  imGui_IsItemDeactivated :: IO CBool
-- C: bool ImGui::IsItemDeactivatedAfterEdit()
foreign import capi unsafe "dcimgui_nodefaultargfunctions.h ImGui_IsItemDeactivatedAfterEdit"
  imGui_IsItemDeactivatedAfterEdit :: IO CBool
-- C: bool ImGui::IsItemEdited()
foreign import capi unsafe "dcimgui_nodefaultargfunctions.h ImGui_IsItemEdited"
  imGui_IsItemEdited :: IO CBool
-- C: bool ImGui::IsItemFocused()
foreign import capi unsafe "dcimgui_nodefaultargfunctions.h ImGui_IsItemFocused"
  imGui_IsItemFocused :: IO CBool
-- C: bool ImGui::IsItemHovered(ImGuiHoveredFlags flags)
foreign import capi unsafe "dcimgui_nodefaultargfunctions.h ImGui_IsItemHovered"
  imGui_IsItemHovered :: ImGuiHoveredFlags -> IO CBool
-- C: bool ImGui::IsItemToggledOpen()
foreign import capi unsafe "dcimgui_nodefaultargfunctions.h ImGui_IsItemToggledOpen"
  imGui_IsItemToggledOpen :: IO CBool
-- C: bool ImGui::IsItemToggledSelection()
foreign import capi unsafe "dcimgui_nodefaultargfunctions.h ImGui_IsItemToggledSelection"
  imGui_IsItemToggledSelection :: IO CBool
-- C: bool ImGui::IsItemVisible()
foreign import capi unsafe "dcimgui_nodefaultargfunctions.h ImGui_IsItemVisible"
  imGui_IsItemVisible :: IO CBool
-- C: bool ImGui::IsKeyChordPressed(ImGuiKeyChord key_chord)
foreign import capi unsafe "dcimgui_nodefaultargfunctions.h ImGui_IsKeyChordPressed"
  imGui_IsKeyChordPressed :: ImGuiKeyChord -> IO CBool
-- C: bool ImGui::IsKeyDown(ImGuiKey key)
foreign import capi unsafe "dcimgui_nodefaultargfunctions.h ImGui_IsKeyDown"
  imGui_IsKeyDown :: ImGuiKey -> IO CBool
-- C: bool ImGui::IsKeyPressed(ImGuiKey key, bool repeat)
foreign import capi unsafe "dcimgui_nodefaultargfunctions.h ImGui_IsKeyPressed"
  imGui_IsKeyPressed :: ImGuiKey -> CBool -> IO CBool
-- C: bool ImGui::IsKeyReleased(ImGuiKey key)
foreign import capi unsafe "dcimgui_nodefaultargfunctions.h ImGui_IsKeyReleased"
  imGui_IsKeyReleased :: ImGuiKey -> IO CBool
-- C: bool ImGui::IsMouseClicked(ImGuiMouseButton button, bool repeat)
foreign import capi unsafe "dcimgui_nodefaultargfunctions.h ImGui_IsMouseClicked"
  imGui_IsMouseClicked :: ImGuiMouseButton -> CBool -> IO CBool
-- C: bool ImGui::IsMouseDoubleClicked(ImGuiMouseButton button)
foreign import capi unsafe "dcimgui_nodefaultargfunctions.h ImGui_IsMouseDoubleClicked"
  imGui_IsMouseDoubleClicked :: ImGuiMouseButton -> IO CBool
-- C: bool ImGui::IsMouseDown(ImGuiMouseButton button)
foreign import capi unsafe "dcimgui_nodefaultargfunctions.h ImGui_IsMouseDown"
  imGui_IsMouseDown :: ImGuiMouseButton -> IO CBool
-- C: bool ImGui::IsMouseDragging(ImGuiMouseButton button, float lock_threshold)
foreign import capi unsafe "dcimgui_nodefaultargfunctions.h ImGui_IsMouseDragging"
  imGui_IsMouseDragging :: ImGuiMouseButton -> CFloat -> IO CBool
foreign import capi unsafe "DearImGuiWrappers.h ImGui_IsMouseHoveringRect_wrap"
  c_imGui_IsMouseHoveringRect :: (Ptr ImVec2) -> (Ptr ImVec2) -> CBool -> IO CBool

imGui_IsMouseHoveringRect :: ImVec2 -> ImVec2 -> CBool -> IO CBool
imGui_IsMouseHoveringRect r_min r_max clip =
  with r_min $ \_p0 -> with r_max $ \_p1 -> c_imGui_IsMouseHoveringRect _p0 _p1 clip

-- C: bool ImGui::IsMousePosValid(const ImVec2* mouse_pos)
foreign import capi unsafe "dcimgui_nodefaultargfunctions.h ImGui_IsMousePosValid"
  imGui_IsMousePosValid :: (Ptr ImVec2) -> IO CBool
-- C: bool ImGui::IsMouseReleased(ImGuiMouseButton button)
foreign import capi unsafe "dcimgui_nodefaultargfunctions.h ImGui_IsMouseReleased"
  imGui_IsMouseReleased :: ImGuiMouseButton -> IO CBool
-- C: bool ImGui::IsMouseReleasedWithDelay(ImGuiMouseButton button, float delay)
foreign import capi unsafe "dcimgui_nodefaultargfunctions.h ImGui_IsMouseReleasedWithDelay"
  imGui_IsMouseReleasedWithDelay :: ImGuiMouseButton -> CFloat -> IO CBool
-- C: bool ImGui::IsPopupOpen(const char* str_id, ImGuiPopupFlags flags)
foreign import capi unsafe "dcimgui_nodefaultargfunctions.h ImGui_IsPopupOpen"
  imGui_IsPopupOpen :: CString -> ImGuiPopupFlags -> IO CBool
foreign import capi unsafe "DearImGuiWrappers.h ImGui_IsRectVisible_wrap"
  c_imGui_IsRectVisible :: (Ptr ImVec2) -> (Ptr ImVec2) -> IO CBool

imGui_IsRectVisible :: ImVec2 -> ImVec2 -> IO CBool
imGui_IsRectVisible rect_min rect_max =
  with rect_min $ \_p0 -> with rect_max $ \_p1 -> c_imGui_IsRectVisible _p0 _p1

foreign import capi unsafe "DearImGuiWrappers.h ImGui_IsRectVisibleBySize_wrap"
  c_imGui_IsRectVisibleBySize :: (Ptr ImVec2) -> IO CBool

imGui_IsRectVisibleBySize :: ImVec2 -> IO CBool
imGui_IsRectVisibleBySize size =
  with size $ \_p0 -> c_imGui_IsRectVisibleBySize _p0

-- C: bool ImGui::IsWindowAppearing()
foreign import capi unsafe "dcimgui_nodefaultargfunctions.h ImGui_IsWindowAppearing"
  imGui_IsWindowAppearing :: IO CBool
-- C: bool ImGui::IsWindowCollapsed()
foreign import capi unsafe "dcimgui_nodefaultargfunctions.h ImGui_IsWindowCollapsed"
  imGui_IsWindowCollapsed :: IO CBool
-- C: bool ImGui::IsWindowDocked()
foreign import capi unsafe "dcimgui_nodefaultargfunctions.h ImGui_IsWindowDocked"
  imGui_IsWindowDocked :: IO CBool
-- C: bool ImGui::IsWindowFocused(ImGuiFocusedFlags flags)
foreign import capi unsafe "dcimgui_nodefaultargfunctions.h ImGui_IsWindowFocused"
  imGui_IsWindowFocused :: ImGuiFocusedFlags -> IO CBool
-- C: bool ImGui::IsWindowHovered(ImGuiHoveredFlags flags)
foreign import capi unsafe "dcimgui_nodefaultargfunctions.h ImGui_IsWindowHovered"
  imGui_IsWindowHovered :: ImGuiHoveredFlags -> IO CBool
-- C: bool ImGui::ListBox(const char* label, int* current_item, const char*const[] items, int items_count, int height_in_items)
foreign import capi unsafe "dcimgui_nodefaultargfunctions.h ImGui_ListBox"
  imGui_ListBox :: CString -> (Ptr CInt) -> (Ptr CString) -> CInt -> CInt -> IO CBool
-- C: bool ImGui::ListBox(const char* label, int* current_item, const char* (*getter)(void* user_data, int idx) getter, void* user_data, int items_count, int height_in_items)
foreign import capi unsafe "dcimgui_nodefaultargfunctions.h ImGui_ListBoxCallback"
  imGui_ListBoxCallback :: CString -> (Ptr CInt) -> (FunPtr ((Ptr ()) -> CInt -> IO CString)) -> (Ptr ()) -> CInt -> CInt -> IO CBool
-- C: void ImGui::LoadIniSettingsFromDisk(const char* ini_filename)
foreign import capi unsafe "dcimgui_nodefaultargfunctions.h ImGui_LoadIniSettingsFromDisk"
  imGui_LoadIniSettingsFromDisk :: CString -> IO ()
-- C: void ImGui::LoadIniSettingsFromMemory(const char* ini_data, size_t ini_size)
foreign import capi unsafe "dcimgui_nodefaultargfunctions.h ImGui_LoadIniSettingsFromMemory"
  imGui_LoadIniSettingsFromMemory :: CString -> CSize -> IO ()
-- C: void ImGui::LogButtons()
foreign import capi unsafe "dcimgui_nodefaultargfunctions.h ImGui_LogButtons"
  imGui_LogButtons :: IO ()
-- C: void ImGui::LogFinish()
foreign import capi unsafe "dcimgui_nodefaultargfunctions.h ImGui_LogFinish"
  imGui_LogFinish :: IO ()
-- C: void ImGui::LogToClipboard(int auto_open_depth)
foreign import capi unsafe "dcimgui_nodefaultargfunctions.h ImGui_LogToClipboard"
  imGui_LogToClipboard :: CInt -> IO ()
-- C: void ImGui::LogToFile(int auto_open_depth, const char* filename)
foreign import capi unsafe "dcimgui_nodefaultargfunctions.h ImGui_LogToFile"
  imGui_LogToFile :: CInt -> CString -> IO ()
-- C: void ImGui::LogToTTY(int auto_open_depth)
foreign import capi unsafe "dcimgui_nodefaultargfunctions.h ImGui_LogToTTY"
  imGui_LogToTTY :: CInt -> IO ()
-- C: void* ImGui::MemAlloc(size_t size)
foreign import capi unsafe "dcimgui_nodefaultargfunctions.h ImGui_MemAlloc"
  imGui_MemAlloc :: CSize -> IO (Ptr ())
-- C: void ImGui::MemFree(void* ptr)
foreign import capi unsafe "dcimgui_nodefaultargfunctions.h ImGui_MemFree"
  imGui_MemFree :: (Ptr ()) -> IO ()
-- C: bool ImGui::MenuItem(const char* label, const char* shortcut, bool selected, bool enabled)
foreign import capi unsafe "dcimgui_nodefaultargfunctions.h ImGui_MenuItem"
  imGui_MenuItem :: CString -> CString -> CBool -> CBool -> IO CBool
-- C: bool ImGui::MenuItem(const char* label, const char* shortcut, bool* p_selected, bool enabled)
foreign import capi unsafe "dcimgui_nodefaultargfunctions.h ImGui_MenuItemBoolPtr"
  imGui_MenuItemBoolPtr :: CString -> CString -> (Ptr CBool) -> CBool -> IO CBool
-- C: void ImGui::NewFrame()
foreign import capi unsafe "dcimgui_nodefaultargfunctions.h ImGui_NewFrame"
  imGui_NewFrame :: IO ()
-- C: void ImGui::NewLine()
foreign import capi unsafe "dcimgui_nodefaultargfunctions.h ImGui_NewLine"
  imGui_NewLine :: IO ()
-- C: void ImGui::NextColumn()
foreign import capi unsafe "dcimgui_nodefaultargfunctions.h ImGui_NextColumn"
  imGui_NextColumn :: IO ()
-- C: void ImGui::OpenPopup(const char* str_id, ImGuiPopupFlags popup_flags)
foreign import capi unsafe "dcimgui_nodefaultargfunctions.h ImGui_OpenPopup"
  imGui_OpenPopup :: CString -> ImGuiPopupFlags -> IO ()
-- C: void ImGui::OpenPopup(ImGuiID id, ImGuiPopupFlags popup_flags)
foreign import capi unsafe "dcimgui_nodefaultargfunctions.h ImGui_OpenPopupID"
  imGui_OpenPopupID :: ImGuiID -> ImGuiPopupFlags -> IO ()
-- C: void ImGui::OpenPopupOnItemClick(const char* str_id, ImGuiPopupFlags popup_flags)
foreign import capi unsafe "dcimgui_nodefaultargfunctions.h ImGui_OpenPopupOnItemClick"
  imGui_OpenPopupOnItemClick :: CString -> ImGuiPopupFlags -> IO ()
foreign import capi unsafe "DearImGuiWrappers.h ImGui_PlotHistogram_wrap"
  c_imGui_PlotHistogram :: CString -> (Ptr CFloat) -> CInt -> CInt -> CString -> CFloat -> CFloat -> (Ptr ImVec2) -> CInt -> IO ()

imGui_PlotHistogram :: CString -> (Ptr CFloat) -> CInt -> CInt -> CString -> CFloat -> CFloat -> ImVec2 -> CInt -> IO ()
imGui_PlotHistogram label values values_count values_offset overlay_text scale_min scale_max graph_size stride =
  with graph_size $ \_p7 -> c_imGui_PlotHistogram label values values_count values_offset overlay_text scale_min scale_max _p7 stride
